    Thanks to Ben Harris <bjh21@cam.ac.uk>. Closes: #669012
  * Compute the md5sum hash on unpack for empty files too, so that these
    can be checked correctly for matching content when installing multiple
    package instances.
  * Generate md5sums files automatically at unpack time if missing from the
    binary package. Closes: #155676, #155799

  [ Helge Kreutzmann ]
  * Fix a typo in man/dpkg-buildflags.1.

  [ Updated dpkg translations ]
  * French (Christian Perrier).
  * German (Sven Joachim).
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * French (Christian Perrier).
  * German (Sven Joachim).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * French (Christian Perrier).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * French (Christian Perrier).
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Mon, 19 Mar 2012 09:53:29 +0100

dpkg (1.16.2) unstable; urgency=low

  [ Guillem Jover ]
  * Move <config.h> and <compat.h> to the top of trigdeferred.l to properly
    use the configured features and compat code.
  * Honour --disable-nls when the system lacks obstack support, by updating
    the obstack compat module from gnulib.
  * Link the libdpkg unit tests with libcompat and libintl, so that systems
    needing them will compile correctly.
  * Check for the presence of the strnlen declaration and correctly provide
    the compat one in case the systems lacks it.
  * Do not assume existence of paths on the build system in the test suite.
  * Do not fail to link dselect on MacOS X when using --disable-nls.
  * Remove versioned coreutils Pre-Depends from dpkg due to the ancient
    md5sum transition. Reported by Bill Allombert <ballombe@debian.org>.
    Closes: #643746
  * Change dpkg-architecture to only compute the requested variables. This:
    - Fixes the bootstrapping problem, as the dpkg build system only needs