@@ -42,6 +42,7 @@ dpkg (1.16.3) UNRELEASED; urgency=low
     package instances.
   * Generate md5sums files automatically at unpack time if missing from the
     binary package. Closes: #155676, #155799
+  * Add missing list and md5sums database file checks to «dpkg --audit».
 
   [ Helge Kreutzmann ]
   * Fix a typo in man/dpkg-buildflags.1.
